# diez-control-center

./: .env.example  .gitignore  CHANGELOG.md  PROJECT_VERSION.md  README.md  package.json  pnpm-lock.yaml
apps/api/: package.json  tsconfig.build.json
apps/api/src/: bootstrap-admin.ts  calculation-core-import-check.ts  db.ts  debug-calculation-fixture.ts  server.ts
apps/desktop/: package.json
apps/desktop/src/: api.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/konstruktor/: board-tape-options.ts  face-film-options.ts  text-layout.ts
docs/: ACCESS_AND_ROLES.md  ARCHITECTURE.md  CODEX_WORKFLOW.md  DEV_RUN.md  FUTURE_ORDERS_AND_CHAT_MODEL.md  MVP_PLAN.md  NAVIGATION_MODEL.md  SITE_ORDERS_AND_CHAT.md  UPDATE_POLICY.md  VERSIONING.md
outputs/: cdek-phase-0-prefixes-20260621-1454.md
