[package]
name = "diez-control-center"
version = "0.0.0"
description = "Diez Image Control Center"
authors = ["Diez Image"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
